# Calls

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CORE_ARCHITECTURE_IMPROVEMENTS.md  CORE_REFACTORING_PROGRESS.md  FetchDependencies.cmake  NETWORK_REFACTORING_PLAN.md  README.md  REFACTORING_PROGRESS.md  TCP_UDP_REFACTORING_PLAN.md  build_opus.bat  build_portaudio.bat  calliforniaServer.Dockerfile  calliforniaServerUpdater.Dockerfile  docker-compose.yml  fetch_dependencies.bat  gen.bat  genRelease.bat
callifornia/: CMakeLists.txt  welcomeText.txt
callifornia/resources/: app_icon.rc  resources.qrc
callifornia/src/: audioEffectsManager.cpp  audioEffectsManager.h  audioSettingsManager.cpp  audioSettingsManager.h  authorizationManager.cpp  authorizationManager.h  authorizationWidget.cpp  authorizationWidget.h  buttons.cpp  buttons.h  callManager.cpp  callManager.h  callWidget.cpp  callWidget.h  callsClientHandler.cpp  callsClientHandler.h  cameraCaptureController.cpp  cameraCaptureController.h  cameraController.cpp  cameraController.h  cameraPreviewWidget.cpp  cameraPreviewWidget.h  cameraSharingManager.cpp  cameraSharingManager.h  clientCallbacksHandler.cpp  clientCallbacksHandler.h  configManager.cpp  configManager.h  dialogsController.cpp  dialogsController.h  frameProcessor.cpp  frameProcessor.h  incomingCallWidget.cpp  incomingCallWidget.h  logger.h  main.cpp  mainMenuWidget.cpp  mainMenuWidget.h  mainWindow.cpp  mainWindow.h  (+20 more)
client/: CMakeLists.txt
client/core/: CMakeLists.txt
client/core/src/: call.cpp  call.h  callStateManager.cpp  callStateManager.h  client.cpp  client.h  clientStateManager.cpp  clientStateManager.h  core.cpp  core.h  errorCode.h  eventListener.h  incomingCall.cpp  incomingCall.h  jsonType.h  keyManager.cpp  keyManager.h  outgoingCall.cpp  outgoingCall.h  packetFactory.cpp  packetFactory.h  packetProcessor.cpp  packetProcessor.h  packetType.h  pendingRequests.cpp  pendingRequests.h  task.h  taskManager.h  userOperation.h  userOperationManager.cpp  userOperationManager.h  userOperationType.h  videoFrameBuffer.h
client/corePythonWrapper/: CMakeLists.txt
client/corePythonWrapper/src/: clientWrapper.cpp
client/src/: CallsClient.cpp  audioEngine.cpp  audioEngine.h  audioPacket.h  call.cpp  call.h  callStateManager.cpp  callStateManager.h  callbacksInterface.h  calls.h  callsClient.h  chunk.h  client.cpp  client.h  clientEventsListener.h  clientStateManager.cpp  clientStateManager.h  clientStatus.h  crypto.cpp  crypto.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  errorCode.h  eventListener.h  groupCall.cpp  groupCall.h  handler.h  incomingCall.cpp  incomingCall.h  incomingCallData.h  joinRequestData.h  jsonType.h  jsonTypes.h  keyManager.cpp  keyManager.h  keysManager.cpp  keysManager.h  logger.h  (+37 more)
client/src/audio/: audioEngine.cpp  audioEngine.h  audioPacket.h  decoder.cpp  decoder.h  encoder.h
client/src/network/: networkController.cpp  networkController.h  packet.h  packetReceiver.cpp  packetReceiver.h  packetSender.cpp  packetSender.h  pingController.cpp  pingController.h  pingManager.cpp  pingManager.h  task.h
client/src/utilities/: crypto.cpp  crypto.h  logger.h  timer.h
client/ui/: CMakeLists.txt
client/ui/documentation/: dialogsController.html  notificationController.html  update-flow-architecture.md
client/ui/resources/: resources.qrc
client/ui/src/: audioSettingsManager.cpp  audioSettingsManager.h  authorizationManager.cpp  authorizationManager.h  authorizationWidget.cpp  buttons.cpp  callManager.cpp  callManager.h  callWidget.cpp  calliforniaEventListener.cpp  calliforniaEventListener.h  cameraCaptureController.cpp  cameraSharingManager.cpp  cameraSharingManager.h  configManager.h  dialogsController.cpp  main.cpp  mainMenuWidget.cpp  mainMenuWidget.h  mainWindow.cpp  mainWindow.h  navigationController.cpp  networkErrorHandler.cpp  networkErrorHandler.h  overlayWidget.cpp  prerequisites.h  screen.h  screenCaptureController.cpp  screenPreviewWidget.cpp  screenSharingManager.cpp  screenSharingManager.h  settingsPanelWidget.cpp  state.h  updateManager.cpp  updateManager.h  updaterEventListener.cpp  updaterEventListener.h
client/updater/: CMakeLists.txt
client/updater/src/: checkResult.h  eventListener.h  jsonType.h  operationSystemType.h  packetType.h  state.h  (+4 more)
clientCorePythonWrapper/: CMakeLists.txt
clientCorePythonWrapper/src/: clientWrapper.cpp
clientPy/: CMakeLists.txt
clientPy/src/: clientWrapper.cpp  wrapper.cpp
clientUpdateApplier/: CMakeLists.txt
clientUpdateApplier/documentation/: updateApplier.html
clientUpdateApplier/src/: updateApplier.cpp
clientUpdaterExample/: CMakeLists.txt
clientUpdaterExample/src/: example.cpp
clientUpdaterPy/: CMakeLists.txt
clientUpdaterPy/src/: clientUpdaterPy.cpp
server/: CMakeLists.txt
server/core/: CMakeLists.txt
server/corePythonWrapper/: CMakeLists.txt
server/src/: call.cpp  call.h  callRole.h  callsServer.cpp  callsServer.h  chunk.h  confirmationKey.h  crypto.cpp  crypto.h  groupCall.cpp  groupCall.h  groupCallRole.h  jsonType.h  jsonTypes.h  logger.h  main.cpp  networkController.cpp  networkController.h  packetFactory.cpp  packetFactory.h  packetType.h  packetTypes.h  packetsFactory.cpp  packetsFactory.h  pendingCall.cpp  sender.cpp  sender.h  server.cpp  server.h  task.h  taskManager.h  user.cpp  user.h
serverPy/: CMakeLists.txt
serverPy/src/: serverWrapper.cpp
serverUpdater/: CMakeLists.txt  LOGGING_MIGRATION.md
serverUpdater/documentation/: serverUpdater.html
serverUpdater/src/: checkResult.h  connection.cpp  connection.h  fileData.h  filesSender.cpp  filesSender.h  jsonType.h  jsonTypes.h  main.cpp  net_filesReceiver.cpp  networkController.cpp  networkController.h  operationSystemType.h  packet.cpp  packet.h  packetType.h  packetTypes.h  packetsReceiver.cpp  packetsReceiver.h  packetsSender.cpp  packetsSender.h  safeDeque.h  serverUpdater.cpp  serverUpdater.h  updater.cpp  updater.h  utility.cpp  utility.h  version.cpp  version.h
serverUpdaterPy/: CMakeLists.txt
serverUpdaterPy/src/: serverUpdaterPy.cpp
(+582 files in other folders)
